# aoc-2024

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
docs/html/: 1_2solution_8c.html  1_2solution_8c.js  1_2solution_8c__incl.md5  1_2solution_8c_a1bbdf5c1ab6a38c1875fc1033c01b5da_cgraph.md5  1_2solution_8c_a2d98dc11e701efb39bc86a25064f71b8_cgraph.md5  1_2solution_8c_a496ba9ac1eb70627e5da3a62ae697b3e_cgraph.md5  1_2solution_8c_ab25e2c7eb016b06e0385bdd8bd363751_cgraph.md5  1_2solution_8c_acb67975793fd84f0571a933ac24c5fde_cgraph.md5  1_8c.html  1_8c.js  1_8c__incl.md5  1_8c_a3fce26e89ac8310f7addc60e85769604_cgraph.md5  1_8c_a496ba9ac1eb70627e5da3a62ae697b3e_cgraph.md5  1_8c_a6cc524c9d77aee9cac5a1d265cab0af4_cgraph.md5  1_8c_ab25e2c7eb016b06e0385bdd8bd363751_cgraph.md5  2_2solution_8c.html  2_2solution_8c.js  2_2solution_8c__incl.md5  2_2solution_8c_a496ba9ac1eb70627e5da3a62ae697b3e_cgraph.md5  2_2solution_8c_a6ae5c24bbde6df9e8c7f3497e9a0217f_cgraph.md5  2_2solution_8c_a72b048babdfd2b8c0108d61dd7342ed5_cgraph.md5  2_2solution_8c_aef3e9d1635a46cd699af83f242b29f24_cgraph.md5  2_2solution_8c_af62fdd5408840424e088f77283c8aa1c_cgraph.md5  2_2solution_8c_afe1b91d6f78ba6eb52f892b358b6e3a7_cgraph.md5  2_8c.html  2_8c.js  2_8c__incl.md5  2_8c_a11bd7c61429442cb9c53605233e5c122_cgraph.md5  2_8c_a496ba9ac1eb70627e5da3a62ae697b3e_cgraph.md5  2_8c_a6ae5c24bbde6df9e8c7f3497e9a0217f_cgraph.md5  2_8c_a897e16e54923cb9351a50c36fc7e4ceb_cgraph.md5  2_8c_acd215318ebe1a7e3a9142a8a342526e8_cgraph.md5  3_8c.html  (+118 more)
include/: aoc.h  cli.h  util.h
src/: CMakeLists.txt  main.c  util.c
(+62 files in other folders)
